src/assets/css/style.css
/* ... */
.sidebar-widget ul.sidebar-widget-list {
  margin: 0;
  padding: 0;
}
.sidebar-widget ul.sidebar-widget-list ul {
  padding-left: 20px;
}
.sidebar-widget ul.sidebar-widget-list li {
  margin: 0;
}
.sidebar-widget ul.sidebar-widget-list li ul li:first-child {
  margin-top: 20px;
}
.sidebar-widget ul.sidebar-widget-list li + li {
  margin-top: 20px;
}
.sidebar-widget ul.sidebar-widget-list li a {
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: #838383;
}
.sidebar-widget ul.sidebar-widget-list li a:hover {
  color: #50bd4d;
}
.widget-about-author {
  box-shadow: 0 3px 24px rgba(0, 0, 0, 0.04);
  border: 1px solid #f0f2f3;
  border-radius: 8px;
}
.widget-about-author-inner {
  padding: 20px;
  background-color: #fff;
  border-radius: 8px 8px 0 0;
  text-align: center;
}
.widget-about-author-inner img {
  border-radius: 50%;
  width: 100px;
  margin: 0 auto 20px;
}
.widget-about-author-inner h5 {
  margin-bottom: 10px;
}
.widget-about-author .andro_sm {
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-radius: 0 0 8px 8px;
}
.widget-about-author .andro_sm li + li {
  margin: 0;
}
.widget-about-author .andro_sm li {
  flex: 1;
}
.widget-about-author .andro_sm li:first-child a {
  border-radius: 0 0 0 8px;
}
.widget-about-author .andro_sm li:last-child a {
  border-radius: 0 0 8px 0;
}
.widget-about-author .andro_sm li a {
  background-color: #f0f2f3;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 20px;
  color: #838383;
}
.widget-about-author .andro_sm li a:hover {
  background-color: #5d5d5d;
  color: #fff;
}

.widget-recent-posts .post > a {
  position: relative;
  display: block;
  overflow: hidden;
  border-radius: 8px;
  margin-bottom: 10px;
}
.widget-recent-posts .post > a img {
  transition: 0.3s;
  border-radius: 8px;
}
.widget-recent-posts .post > a img:hover {
  transform: scale(1.1) rotate(2deg);
}
.widget-recent-posts .post h6 {
  margin-bottom: 10px;
}
.widget-recent-posts .post h6 a {
  color: #18181d;
}
.widget-recent-posts .post h6 a:hover,
.widget-recent-posts .post span a:hover {
  color: #50bd4d;
}
.widget-recent-posts .post span {
  font-size: 13px;
  line-height: 1.7;
  font-weight: 600;
  color: #18181d;
}
.widget-recent-posts .post span a {
  font-weight: 400;
  text-decoration: underline;
  color: #18181d;
}
.widget-recent-posts .post + .post {
  margin-top: 30px;
}

.tags a,
.tagcloud a,
.entry-content .wp-block-tag-cloud a {
  display: inline-block;
  font-size: 13px;
  padding: 3px 12px;
  color: #848486;
  border: 1px solid #f0f2f3;
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
  background-color: #fff;
  margin: 6px 6px 0 0;
  border-radius: 8px;
}
.tags a:hover,
.tagcloud a:hover,
.entry-content .wp-block-tag-cloud a:hover {
  background-color: #f5f5f5;
  border-color: rgba(0, 0, 0, 0.1);
  color: #848486;
  -webkit-box-shadow: none;
  box-shadow: none;
}

.andro_newsletter-form {
  position: relative;
  background-color: #f0f2f3;
  padding: 20px;
  border-radius: 8px;
}
.andro_newsletter-form.primary-bg {
  background-color: #50bd4d;
}
.andro_newsletter-form h5 {
  margin-bottom: 15px;
}

.deals-slider .slick-dots {
  justify-content: center;
  margin: 10px 0 0;
}
.deals-slider .andro_product:hover .andro_countdown-timer {
  background-color: #f0f2f3;
}

.andro_countdown-timer {
  text-align: center;
  background-color: #fff;
  border: 1px solid #f0f2f3;
  padding: 10px;
  font-weight: 600;
  margin: 20px 0 0;
  transition: 0.3s;
}

/* 6.3. Products */
.andro_product {
  position: relative;
  padding: 20px;
  background-color: #fff;
  border: 1px solid #f0f2f3;
  box-shadow: 0 3px 24px rgba(0, 0, 0, 0.04);
  border-radius: 8px;
  margin-bottom: 30px;
}
.andro_product .andro_product-thumb {
  margin: 0 0 20px;
  overflow: hidden;
}
.andro_product .andro_product-thumb.thumb-sm {
  max-width: 200px;
  margin: 0 auto 20px;
}
.andro_product .andro_product-thumb img {
  transition: 0.3s;
  height: 150px
}
.andro_product .andro_product-thumb:hover img {
  transform: scale(1.1) rotate(3deg);
}
.andro_product .andro_product-body h5 {
  margin: 0 0 15px;
  word-break: break-word;
}
.andro_product .andro_product-body .andro_product-title a {
  color: #18181d;
  font-size: larger;
  font-weight:normal
}
.andro_product .andro_product-body .andro_product-title a:hover {
  color: #40a13d;
}
.andro_product .andro_badge-featured {
  position: absolute;
  top: 0;
  left: 0;
  background-color: #ffa80a;
  color: #fff;
  border-radius: 8px 0 8px 0;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 3;
  font-size: 13px;
  padding: 3px 12px;
}
.andro_product .andro_badge-featured i {
  margin-right: 5px;
  display: inline-block;
}
.andro_product .andro_badge-sale {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  z-index: 3;
  background-color: #5d5d5d;
  font-weight: 600;
  color: #fff;
  font-size: 13px;
  line-height: 1.7;
  padding: 3px 12px;
  border-radius: 0 0 8px 8px;
}
.andro_product .andro_rating-wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.andro_product .andro_rating-wrapper span {
  font-weight: 600;
}
.andro_product .andro_product-footer {
  padding-top: 20px;
  margin-top: 20px;
  border-top: 1px solid #f0f2f3;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.andro_product-price span {
  display: block;
}
.andro_product-price span:first-child {
  font-size: 18px;
  line-height: 1.2;
  font-family: "Montserrat", sans-serif;
  color: #18181d;
  font-weight: 700;
}
.andro_product-price span + span {
  font-size: 14px;
  font-family: "Montserrat", sans-serif;
  color: #50bd4d;
  font-weight: 700;
  text-decoration: line-through;
}
.andro_product.andro_product-has-controls
  .andro_product-body
  .andro_product-price {
  margin-bottom: 10px;
}
/* ... */

